crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__spicecloud-arrow_tpcds_q3_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpcds_q3"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                              |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: dt.d_year ASC NULLS LAST, sum_agg DESC NULLS FIRST, brand_id ASC NULLS LAST, fetch=100                                                                                                                      |
|               |   Projection: dt.d_year, item.i_brand_id AS brand_id, item.i_brand AS brand, sum(store_sales.ss_net_profit) AS sum_agg                                                                                            |
|               |     Aggregate: groupBy=[[dt.d_year, item.i_brand, item.i_brand_id]], aggr=[[sum(store_sales.ss_net_profit)]]                                                                                                      |
|               |       Projection: dt.d_year, store_sales.ss_net_profit, item.i_brand_id, item.i_brand                                                                                                                             |
|               |         Inner Join: store_sales.ss_item_sk = item.i_item_sk                                                                                                                                                       |
|               |           Projection: dt.d_year, store_sales.ss_item_sk, store_sales.ss_net_profit                                                                                                                                |
|               |             Inner Join: dt.d_date_sk = store_sales.ss_sold_date_sk                                                                                                                                                |
|               |               SubqueryAlias: dt                                                                                                                                                                                   |
|               |                 Projection: date_dim.d_date_sk, date_dim.d_year                                                                                                                                                   |
|               |                   Filter: date_dim.d_moy = Int64(12)                                                                                                                                                              |
|               |                     TableScan: date_dim projection=[d_date_sk, d_year, d_moy]                                                                                                                                     |
|               |               TableScan: store_sales projection=[ss_sold_date_sk, ss_item_sk, ss_net_profit]                                                                                                                      |
|               |           Projection: item.i_item_sk, item.i_brand_id, item.i_brand                                                                                                                                               |
|               |             Filter: item.i_manufact_id = Int64(445)                                                                                                                                                               |
|               |               TableScan: item projection=[i_item_sk, i_brand_id, i_brand, i_manufact_id]                                                                                                                          |
| physical_plan | SortPreservingMergeExec: [d_year@0 ASC NULLS LAST, sum_agg@3 DESC, brand_id@1 ASC NULLS LAST], fetch=100                                                                                                          |
|               |   SortExec: TopK(fetch=100), expr=[d_year@0 ASC NULLS LAST, sum_agg@3 DESC, brand_id@1 ASC NULLS LAST], preserve_partitioning=[true]                                                                              |
|               |     ProjectionExec: expr=[d_year@0 as d_year, i_brand_id@2 as brand_id, i_brand@1 as brand, sum(store_sales.ss_net_profit)@3 as sum_agg]                                                                          |
|               |       AggregateExec: mode=FinalPartitioned, gby=[d_year@0 as d_year, i_brand@1 as i_brand, i_brand_id@2 as i_brand_id], aggr=[sum(store_sales.ss_net_profit)]                                                     |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                               |
|               |           RepartitionExec: partitioning=Hash([d_year@0, i_brand@1, i_brand_id@2], 32), input_partitions=32                                                                                                        |
|               |             AggregateExec: mode=Partial, gby=[d_year@0 as d_year, i_brand@3 as i_brand, i_brand_id@2 as i_brand_id], aggr=[sum(store_sales.ss_net_profit)]                                                        |
|               |               CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                         |
|               |                 HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(ss_item_sk@1, i_item_sk@0)], projection=[d_year@0, ss_net_profit@2, i_brand_id@4, i_brand@5]             |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                     |
|               |                     RepartitionExec: partitioning=Hash([ss_item_sk@1], 32), input_partitions=32                                                                                                                   |
|               |                       CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                 |
|               |                         HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(d_date_sk@0, ss_sold_date_sk@0)], projection=[d_year@1, ss_item_sk@3, ss_net_profit@4]           |
|               |                           CoalesceBatchesExec: target_batch_size=8192                                                                                                                                             |
|               |                             RepartitionExec: partitioning=Hash([d_date_sk@0], 32), input_partitions=32                                                                                                            |
|               |                               CoalesceBatchesExec: target_batch_size=8192                                                                                                                                         |
|               |                                 FilterExec: d_moy@2 = 12, projection=[d_date_sk@0, d_year@1]                                                                                                                      |
|               |                                   SchemaCastScanExec                                                                                                                                                              |
|               |                                     BytesProcessedExec                                                                                                                                                            |
|               |                                       DataSourceExec: partitions=32, partition_sizes=[2, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]                             |
|               |                           CoalesceBatchesExec: target_batch_size=8192                                                                                                                                             |
|               |                             RepartitionExec: partitioning=Hash([ss_sold_date_sk@0], 32), input_partitions=32                                                                                                      |
|               |                               SchemaCastScanExec                                                                                                                                                                  |
|               |                                 BytesProcessedExec                                                                                                                                                                |
|               |                                   DataSourceExec: partitions=32, partition_sizes=[44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 43] |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                     |
|               |                     RepartitionExec: partitioning=Hash([i_item_sk@0], 32), input_partitions=32                                                                                                                    |
|               |                       CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                 |
|               |                         FilterExec: i_manufact_id@3 = 445, projection=[i_item_sk@0, i_brand_id@1, i_brand@2]                                                                                                      |
|               |                           RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                   |
|               |                             SchemaCastScanExec                                                                                                                                                                    |
|               |                               BytesProcessedExec                                                                                                                                                                  |
|               |                                 DataSourceExec: partitions=1, partition_sizes=[9]                                                                                                                                 |
|               |                                                                                                                                                                                                                   |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
