crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__spicecloud-arrow_tpcds_q42_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpcds_q42"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                             |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: sum(store_sales.ss_ext_sales_price) DESC NULLS FIRST, dt.d_year ASC NULLS LAST, item.i_category_id ASC NULLS LAST, item.i_category ASC NULLS LAST, fetch=100                                               |
|               |   Aggregate: groupBy=[[dt.d_year, item.i_category_id, item.i_category]], aggr=[[sum(store_sales.ss_ext_sales_price)]]                                                                                            |
|               |     Projection: dt.d_year, store_sales.ss_ext_sales_price, item.i_category_id, item.i_category                                                                                                                   |
|               |       Inner Join: store_sales.ss_item_sk = item.i_item_sk                                                                                                                                                        |
|               |         Projection: dt.d_year, store_sales.ss_item_sk, store_sales.ss_ext_sales_price                                                                                                                            |
|               |           Inner Join: dt.d_date_sk = store_sales.ss_sold_date_sk                                                                                                                                                 |
|               |             SubqueryAlias: dt                                                                                                                                                                                    |
|               |               Projection: date_dim.d_date_sk, date_dim.d_year                                                                                                                                                    |
|               |                 Filter: date_dim.d_moy = Int64(11) AND date_dim.d_year = Int64(1998)                                                                                                                             |
|               |                   TableScan: date_dim projection=[d_date_sk, d_year, d_moy]                                                                                                                                      |
|               |             TableScan: store_sales projection=[ss_sold_date_sk, ss_item_sk, ss_ext_sales_price]                                                                                                                  |
|               |         Projection: item.i_item_sk, item.i_category_id, item.i_category                                                                                                                                          |
|               |           Filter: item.i_manager_id = Int64(1)                                                                                                                                                                   |
|               |             TableScan: item projection=[i_item_sk, i_category_id, i_category, i_manager_id]                                                                                                                      |
| physical_plan | SortPreservingMergeExec: [sum(store_sales.ss_ext_sales_price)@3 DESC, d_year@0 ASC NULLS LAST, i_category_id@1 ASC NULLS LAST, i_category@2 ASC NULLS LAST], fetch=100                                           |
|               |   SortExec: TopK(fetch=100), expr=[sum(store_sales.ss_ext_sales_price)@3 DESC, i_category_id@1 ASC NULLS LAST, i_category@2 ASC NULLS LAST], preserve_partitioning=[true]                                        |
|               |     AggregateExec: mode=FinalPartitioned, gby=[d_year@0 as d_year, i_category_id@1 as i_category_id, i_category@2 as i_category], aggr=[sum(store_sales.ss_ext_sales_price)], ordering_mode=PartiallySorted([0]) |
|               |       CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                |
|               |         RepartitionExec: partitioning=Hash([d_year@0, i_category_id@1, i_category@2], 32), input_partitions=32                                                                                                   |
|               |           AggregateExec: mode=Partial, gby=[d_year@0 as d_year, i_category_id@2 as i_category_id, i_category@3 as i_category], aggr=[sum(store_sales.ss_ext_sales_price)], ordering_mode=PartiallySorted([0])    |
|               |             CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                          |
|               |               HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(ss_item_sk@1, i_item_sk@0)], projection=[d_year@0, ss_ext_sales_price@2, i_category_id@4, i_category@5]   |
|               |                 CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                      |
|               |                   RepartitionExec: partitioning=Hash([ss_item_sk@1], 32), input_partitions=32                                                                                                                    |
|               |                     CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                  |
|               |                       HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(d_date_sk@0, ss_sold_date_sk@0)], projection=[d_year@1, ss_item_sk@3, ss_ext_sales_price@4]       |
|               |                         CoalesceBatchesExec: target_batch_size=8192                                                                                                                                              |
|               |                           RepartitionExec: partitioning=Hash([d_date_sk@0], 32), input_partitions=32                                                                                                             |
|               |                             CoalesceBatchesExec: target_batch_size=8192                                                                                                                                          |
|               |                               FilterExec: d_moy@2 = 11 AND d_year@1 = 1998, projection=[d_date_sk@0, d_year@1]                                                                                                   |
|               |                                 SchemaCastScanExec                                                                                                                                                               |
|               |                                   BytesProcessedExec                                                                                                                                                             |
|               |                                     DataSourceExec: partitions=32, partition_sizes=[2, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]                              |
|               |                         CoalesceBatchesExec: target_batch_size=8192                                                                                                                                              |
|               |                           RepartitionExec: partitioning=Hash([ss_sold_date_sk@0], 32), input_partitions=32                                                                                                       |
|               |                             SchemaCastScanExec                                                                                                                                                                   |
|               |                               BytesProcessedExec                                                                                                                                                                 |
|               |                                 DataSourceExec: partitions=32, partition_sizes=[44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 44, 43]  |
|               |                 CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                      |
|               |                   RepartitionExec: partitioning=Hash([i_item_sk@0], 32), input_partitions=32                                                                                                                     |
|               |                     CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                  |
|               |                       FilterExec: i_manager_id@3 = 1, projection=[i_item_sk@0, i_category_id@1, i_category@2]                                                                                                    |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                    |
|               |                           SchemaCastScanExec                                                                                                                                                                     |
|               |                             BytesProcessedExec                                                                                                                                                                   |
|               |                               DataSourceExec: partitions=1, partition_sizes=[9]                                                                                                                                  |
|               |                                                                                                                                                                                                                  |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
